[package]
name = "more_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rfd = "0.8.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.137"

[build-dependencies]
cc = "1.0"
